--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -47,11 +47,11 @@ $(LIBS) \
 # phony targets are not real files
 .PHONY: all clean install install-headers install-kernel
 
-all: shedos.kernel
+all: shedOS.kernel
 
-shedos.kernel: $(OBJS) $(ARCHDIR)/linker.ld
+shedOS.kernel: $(OBJS) $(ARCHDIR)/linker.ld
 	$(CC) -T $(ARCHDIR)/linker.ld -o $@ $(CFLAGS) $(LINK_LIST)
-	grub-file --is-x86-multiboot shedos.kernel
+	grub-file --is-x86-multiboot shedOS.kernel
 
 $(ARCHDIR)/crtbegin.o $(ARCHDIR)/crtend.o:
 	OBJ=`$(CC) $(CFLAGS) $(LDFLAGS) -print-file-name=$(@F)` && cp "$$OBJ" $@
@@ -63,7 +63,7 @@ $(ARCHDIR)/crtbegin.o $(ARCHDIR)/crtend.o:
 	nasm -felf32 -o $@ $<
 
 clean:
-	rm -f shedos.kernel $(OBJS) *.o */*.o */*/*.o
+	rm -f shedOS.kernel $(OBJS) *.o */*.o */*/*.o
 
 install: install-headers install-kernel
 
@@ -71,7 +71,7 @@ install-headers:
 	mkdir -p $(DESTDIR)$(INCLUDEDIR)
 	cp -RTv --preserve=timestamps include $(DESTDIR)$(INCLUDEDIR)
 
-install-kernel: shedos.kernel
+install-kernel: shedOS.kernel
 	@echo "INSTALLER GO BRRRRR"
 	mkdir -p $(DESTDIR)$(BOOTDIR)
-	cp shedos.kernel $(DESTDIR)$(BOOTDIR)
+	cp shedOS.kernel $(DESTDIR)$(BOOTDIR)
