make self-hosted by moving gnuefi essentials into external, make GOP work by getting BT from ST

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,5 +1,4 @@
-GNU_EFI?=/home/bastian/kern/gnu-efi
-BIOS_BIN?=/home/bastian/kern/bios64.bin
+EXTERNAL?=
 
 # using LLVM/Clang because it natively supports cross-compilation
 # (and because I can't get a w64-mingw32 cc to work properly. Too bad!)
@@ -13,8 +12,8 @@ CFLAGS:=-target x86_64-unknown-windows \
     -ffreestanding \
     -fshort-wchar \
     -mno-red-zone \
-    -I$(GNU_EFI)/inc -I$(GNU_EFI)/inc/x86_64 \
-    -I$(GNU_EFI)/inc/protocol \
+    -I$(EXTERNAL)/gnuefi/inc -I$(EXTERNAL)/gnuefi/inc/x86_64 \
+    -I$(EXTERNAL)/gnuefi/inc/protocol \
     -Iinclude
 
 LDFLAGS:=-target x86_64-unknown-windows \
@@ -51,11 +50,11 @@ ISO: IMG
 	-o cdimage.iso iso
 
 # this is needed by GNU-EFI
-data.o: $(GNU_EFI)/lib/data.c
-	$(CC) $(CFLAGS) -std=gnu11 -c -o data.o $(GNU_EFI)/lib/data.c
+data.o: $(EXTERNAL)/gnuefi/data.c
+	$(CC) $(CFLAGS) -std=gnu11 -c -o data.o $(EXTERNAL)/gnuefi/data.c
 
 %.o: %.c
 	$(CC) $(CFLAGS) -std=gnu11 -c -o $@ $<
 
 clean:
-	rm -rf $(OBJS) BOOTX64.EFI fat.img iso cdimage.iso
+	rm -rf $(OBJS) BOOTX64.EFI fat.img iso cdimage.iso data.o
