add printk, add proper sysroot for installation and corresponding scripts

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,25 +1,25 @@
 EXTERNAL?=
 
 CC=clang
-LD=ld.lld
+LD=ld
 LDS=kernel.ld
 
-CFLAGS=-ffreestanding -fshort-wchar
+CFLAGS=-ffreestanding -fshort-wchar -fno-stack-protector
 LDFLAGS=-T$(LDS) \
 	-static \
 	-Bsymbolic \
 	-nostdlib
 
 OBJS:=src/main.o src/terminal.o src/framebuffer.o src/font.o \
-    src/libk/string.o
+    src/libk/string.o src/libk/printk.o
 
 .PHONY: all clean install
 
 all: install
 
 install: kernel.elf
-	mkdir -p $(DESTDIR)
-	cp -f kernel.elf $(DESTDIR)
+	mkdir -p $(DESTDIR)/boot
+	cp -f kernel.elf $(DESTDIR)/boot
 
 kernel.elf: $(OBJS)
 	$(LD) $(LDFLAGS) $(OBJS) -o kernel.elf
