use gcc cross toolchain

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,11 +1,13 @@
 EXTERNAL?=
 
-CC?=clang
+CC?=gcc
 LD?=ld
+AR?=ar
 LDS=kernel.ld
 
 override CFLAGS+=-ffreestanding -fno-stack-protector \
-    -Iinclude
+    -I/home/bastian/shedOS/sysroot/include \
+	-mno-red-zone
 
 LDFLAGS=-T$(LDS) \
 	-static \
