keyboard interrupts are (almost) working!!

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -21,7 +21,8 @@ ASFLAGS=
 OBJS:=src/main.o src/terminal.o src/framebuffer.o src/font.o \
     src/cpuinfo.o src/memory/efi_memory.o src/memory/pfa.o \
     src/memory/bitmap.o src/memory/paging.o src/gdt/gdt.o \
-    src/int/exceptions.o src/int/idt.o
+    src/int/exceptions.o src/int/idt.o src/int/pic.o \
+    src/io.o src/int/irqs.o src/gdt/load.o src/input/keyboard.o \
 
 .PHONY: all clean install install-headers
 
@@ -50,6 +51,10 @@ kernel.elf: $(OBJS)
 	$(AS) $(ASFLAGS) -o $@ $<
 
 src/int/exceptions.o: src/int/exceptions.c
+	@ echo =====! COMPILING $< =====!
+	$(CC) $(CFLAGS) -mgeneral-regs-only -c -o $@ $<
+
+src/int/irqs.o: src/int/irqs.c
 	@ echo =====! COMPILING $< =====!
 	$(CC) $(CFLAGS) -mgeneral-regs-only -c -o $@ $<
 
