add testelf limine module

--- a/limine.cfg
+++ b/limine.cfg
@@ -6,3 +6,6 @@ PROTOCOL=stivale2
 
 KERNEL_PATH=boot:///boot/kernel.elf
 KERNEL_CMDLINE=Wow!
+
+MODULE_PATH=boot:///boot/testelf
+MODULE_STRING=ELFtest
