--- a/limine.cfg
+++ b/limine.cfg
@@ -7,5 +7,8 @@ PROTOCOL=stivale2
 KERNEL_PATH=boot:///boot/kernel.elf
 KERNEL_CMDLINE=Wow!
 
-MODULE_PATH=boot:///boot/testelf
-MODULE_STRING=ELFtest
+MODULE_PATH=boot:///boot/testelf1
+MODULE_STRING=testelf1
+
+MODULE_PATH=boot:///boot/testelf2
+MODULE_STRING=testelf2
