--- a/limine.cfg
+++ b/limine.cfg
@@ -1,9 +1,8 @@
-TIMEOUT=5
-KASLR=n
+TIMEOUT=3
 
 :stivale2
 PROTOCOL=stivale2
-
+KASLR=no
 KERNEL_PATH=boot:///boot/kernel.elf
 KERNEL_CMDLINE=Wow!
 
